# trajectory_variance

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
Counterfactual_generation/: analyze_plasticity.py  baseline_comparison.py  compute_fad2.py  label_song_calls.py  plot_fig1.py  run_evaluations.py  run_fad2_all.py  train_ae.py  train_ot_flow.py  utils.py
Counterfactual_generation/models/: __init__.py  evaluation_results.json  fad2_summary.json  fig1_data_R4634.npz  fig1_data_R4951.npz  fig1_data_R5018.npz  flow.py  paper_eval_results.json  spectral_flatness_R4634.npz  spectral_flatness_R4951.npz  spectral_flatness_R5018.npz
Counterfactual_generation/models/ot_flow_R4634_knn/: config.json
Counterfactual_generation/models/ot_flow_R4634_ot/: config.json
Counterfactual_generation/models/ot_flow_R4951_knn/: config.json
Counterfactual_generation/models/ot_flow_R4951_ot/: config.json
Counterfactual_generation/models/ot_flow_R5018_knn/: config.json
Counterfactual_generation/models/ot_flow_R5018_ot/: config.json
Counterfactual_generation/models/vae_R4634/: config.json
Counterfactual_generation/models/vae_R4951/: config.json
Counterfactual_generation/models/vae_R5018/: config.json
gold_standard_labels/: R4634_song_labels_pipeline_order.npz  R4951_song_labels_pipeline_order.npz  R5018_song_labels_pipeline_order.npz
